# mythikself

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  config.py  models.py  schemas.py  tasks.py
app/api/: deps.py  main.py
app/api/routes/: auth_routes.py  generation_routes.py  payment_routes.py
app/config/: settings.py
app/core/: auth.py  products.py  storage.py
app/db/: config.py  deps.py  models.py
app/domains/users/: routes.py  schemas.py  services.py
app/lib/: deps.py  schemas.py
app/mappers/: generation_mapper.py  user_mapper.py
app/schemas/: credits.py  generations.py  lemonsqueezy.py  shared.py  users.py
drafts/: generate.ipynb
